# vendor_management_system

./: .env.template  .gitignore  Readme.md  pyproject.toml  requirements.txt
orders/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py
vendor_management_system/: mixins.py  settings.py  urls.py
vendors/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
vendors/migrations/: 0001_initial.py
