pyproject.toml

[tool.poetry]
name = "vendor-management-system"
version = "0.1.0"
description = ""
authors = []
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.3"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
djangorestframework = "3.15.1"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
mypy = "*"
autoflake = "*"
isort = "*"
pyclean = "*"
django-debug-toolbar = "*"


[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"